# orteaf

./: .gitignore  Agent.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/modules/: OrteafMetalKernels.cmake
configs/architecture/: architectures.yml
configs/device/: devices.yml
configs/kernel/: storage_roles.yml
docs/: README.md  pool_manager_test_plan.md
docs/developer/: cuda-execution-manager-plan.md  cuda-runtime-manager-plan.md  design.md  environment.md  runtime-architecture.md  slot-pool.md
docs/notes/: float16.md
orteaf/: CMakeLists.txt
orteaf/src/internal/architecture/: cpu_detect.cpp  cuda_detect.cpp  mps_detect.cpp
orteaf/src/user/execution_context/: cpu_context_guard.cpp  cuda_context_guard.cpp  mps_context_guard.cpp
orteaf/src/user/tensor/: tensor.cpp  tensor_api.cpp
tests/: CMakeLists.txt
tests/internal/architecture/: architecture_test.cpp  cpu_detect_test.cpp  cuda_detect_test.cpp  cuda_detect_test.cu  mps_detect_test.cpp  mps_detect_test.mm
tests/internal/backend/cpu/: cpu_stats_test.cpp
tests/internal/backend/cuda/: cuda_alloc_test.cu  cuda_check_error_test.cpp  cuda_check_error_test.cu  cuda_device_test.cu  cuda_graph_test.cu  cuda_module_function_test.cu
tests/internal/base/: block_vector_test.cpp  handle_test.cpp  lru_list_test.cpp
tests/internal/device/: device_tables_test.cpp
tests/internal/dtype/: dtype_test.cpp
tests/internal/kernel/: cpu_kernel_args_test.cpp  kernel_args_test.cpp  kernel_metadata_test.cpp  kernel_storage_schema_test.cpp  key_resolver_test.cpp  mps_kernel_args_test.mm  op_id_test.cpp  param_id_test.cpp
tests/internal/runtime/: cpu_device_manager_test.cpp  mps_device_manager_test.cpp  strong_id_test.cpp
tests/internal/storage/: typed_storage_manager_test.cpp
tests/user/execution_context/: cuda_context_guard_test.cpp  mps_context_guard_test.mm
tools/codegen/: CMakeLists.txt  gen_devices.cpp  gen_param_ids.cpp  gen_storage_roles.cpp  include_resolver.h
(+434 files in other folders)
